using signals now, need to fix web panel not showing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -37,7 +37,7 @@ h1 {
 
 .item {
     min-width: 500px;
-    max-height: 180px;
+    max-height: 200px;
     margin-bottom: 15px;
 }
 
